# Account-Register

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.json  docker-compose.yml  mail_service.py  oauth_service.py  pyproject.toml  register_all.py  server.py  sub2api_uploader.py
.github/workflows/: docker-image.yml
docker/: entrypoint.sh
src/gpt_account_register/: __init__.py  __main__.py
web/: app.js  index.html  style.css
