[project]
name = "gpt-account-register"
version = "0.1.0"
description = "ChatGPT 批量注册与 Web 管理工具"
readme = "README.md"
authors = [
    { name = "x", email = "xx@qq.com" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "curl-cffi",
    "fastapi",
    "pydantic",
    "uvicorn",
]

[project.scripts]
gpt-account-register = "gpt_account_register:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
